# Hockey_Scraper

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLUBS_WITHOUT_LOGOS.md  Gamesheet_All_Scrape.py  README.md  advanced_metrics.py  advanced_stats_database.py  api_models.py  api_server.py  club_importer.py  club_models.py  club_scraper.py  club_scraper_angular.py  club_scraper_base.py  club_scraper_crossbar.py  club_scraper_leagueapps.py  club_scraper_mryha.py  club_scraper_providence.py  club_scraper_sportsengine.py  data_importer.py  data_quality_analyzer.py  data_quality_monitor.py  full_pipeline.py  hockey_dashboard.html  hockey_dashboard.jsx  hockey_dashboard_full.html  hockey_dashboard_v2.html  logo_service.py  normalize_team_names.py  pipeline_config.py  player_reconciler.py  pyproject.toml  requirements.txt  smart_updater.py  ssc_hockey_scraper.py  ssc_weekly_scraper.py  standings_data.js  stats_calculator.py  tmp_probe_clubs.py
config/: bshl_divisions.json  ssc_clubs.json
docs/api/: ADVANCED_STATS_API_DESIGN.md  API_ENDPOINTS.md  API_IMPLEMENTATION_SUMMARY.md  API_SERVER_README.md  API_STRUCTURE.md  QUICKSTART_API.md
scripts/: ehf_data_import.py  full_data_import.py  incremental_import.py  run_updates.bat  setup_scheduled_task.ps1  ssc_cron_setup.sh  ssc_weekly_update.sh  unified_import.py
tests/: create_test_database.py  test_api.py  test_database.py  test_ehf_import.py  test_ehf_quick.sh  test_full_pipeline.py  test_multidate_scraper.py  test_ollama_stress.py  test_ssc_weekly_automation.py  test_stats_calculator.py  validate_game_details.py  validate_system.py
(+46 files in other folders)
